--- a/index.html
+++ b/index.html
@@ -1,14 +1,77 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Yurim Portfolio</title>
+    <link rel="stylesheet" type="text/css" href="./css/baes.css">
+    <link rel="stylesheet" type="text/css" href="./css/core.css">
+    <link rel="stylesheet" type="text/css" href="./css/main.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/moonspam/NanumSquare/master/nanumsquare.css">
+
+
 </head>
 
 <body>
+    <header>
+        <div class="h_inner">
+            <h1>
+                <a href="index.html" title="메인으로바로가기"><img src="./image/main_logo.png" alt="메인로고"></a>
+            </h1>
+            <nav class="gnb">
+                <ul>
+                    <li><a href="#none" title="about"><svg viewBox="0 0 20 20" fill="currentColor"
+                                class="emoji-happy w-6 h-6">
+                                <path fill-rule="evenodd"
+                                    d="M10 18a8 8 0 100-16 8 8 0 000 16zM7 9a1 1 0 100-2 1 1 0 000 2zm7-1a1 1 0 11-2 0 1 1 0 012 0zm-.464 5.535a1 1 0 10-1.415-1.414 3 3 0 01-4.242 0 1 1 0 00-1.415 1.414 5 5 0 007.072 0z"
+                                    clip-rule="evenodd"></path>
+                            </svg>about</a></li>
+                    <li><a href="#none" title="web"><svg viewBox="0 0 20 20" fill="currentColor" class="fire w-6 h-6">
+                                <path fill-rule="evenodd"
+                                    d="M11.757 2.034a1 1 0 01.638.519c.483.967.844 1.554 1.207 2.03.368.482.756.876 1.348 1.467A6.985 6.985 0 0117 11a7.002 7.002 0 01-14 0c0-1.79.684-3.583 2.05-4.95a1 1 0 011.707.707c0 1.12.07 1.973.398 2.654.18.374.461.74.945 1.067.116-1.061.328-2.354.614-3.58.225-.966.505-1.93.839-2.734.167-.403.356-.785.57-1.116.208-.322.476-.649.822-.88a1 1 0 01.812-.134zm.364 13.087A2.998 2.998 0 017 13s.879.5 2.5.5c0-1 .5-4 1.25-4.5.5 1 .786 1.293 1.371 1.879.586.585.879 1.353.879 2.121s-.293 1.536-.879 2.121z"
+                                    clip-rule="evenodd"></path>
+                            </svg>web</a>
+                        <ul class="sub">
+                            <li><a href="#none" title="web">web</a></li>
+                            <li><a href="#none" title="component">component</a></li>
+                            <li><a href="#none" title="study">study</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#none" title="design"><svg viewBox="0 0 20 20" fill="currentColor"
+                                class="beaker w-6 h-6">
+                                <path fill-rule="evenodd"
+                                    d="M7 2a1 1 0 00-.707 1.707L7 4.414v3.758a1 1 0 01-.293.707l-4 4C.817 14.769 2.156 18 4.828 18h10.343c2.673 0 4.012-3.231 2.122-5.121l-4-4A1 1 0 0113 8.172V4.414l.707-.707A1 1 0 0013 2H7zm2 6.172V4h2v4.172a3 3 0 00.879 2.12l1.027 1.028a4 4 0 00-2.171.102l-.47.156a4 4 0 01-2.53 0l-.563-.187a1.993 1.993 0 00-.114-.035l1.063-1.063A3 3 0 009 8.172z"
+                                    clip-rule="evenodd"></path>
+                            </svg>design</a>
+                        <ul class="sub">
+                            <li><a href="#none" title="w_graphics">w_graphics</a></li>
+                            <li><a href="#none" title="artwork">artwork</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#none" title="contact"><svg viewBox="0 0 20 20" fill="currentColor"
+                                class="mail w-6 h-6">
+                                <path d="M2.003 5.884L10 9.882l7.997-3.998A2 2 0 0016 4H4a2 2 0 00-1.997 1.884z"></path>
+                                <path d="M18 8.118l-8 4-8-4V14a2 2 0 002 2h12a2 2 0 002-2V8.118z"></path>
+                            </svg>contact</a></li>
+                </ul>
+            </nav>
+            <nav class="lnb">
+                <ul>
+                    <li><a href="#none" title="">sns</a></li>
+                    <li><a href="#none" title="">sns</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 
+    <section>
+
+    </section>
+
+    <footer>
+
+    </footer>
 </body>
 
 </html>
