--- a/index.html
+++ b/index.html
@@ -56,6 +56,32 @@
             </svg>contact</a></li>
       </ul>
     </div>
+    <div class="tab_menu">
+        <ul class="tab_gnb">
+        <li><a href="#none" title="about"><svg viewBox="0 0 20 20" fill="currentColor" class="emoji-happy w-6 h-6">
+              <path fill-rule="evenodd"
+                d="M10 18a8 8 0 100-16 8 8 0 000 16zM7 9a1 1 0 100-2 1 1 0 000 2zm7-1a1 1 0 11-2 0 1 1 0 012 0zm-.464 5.535a1 1 0 10-1.415-1.414 3 3 0 01-4.242 0 1 1 0 00-1.415 1.414 5 5 0 007.072 0z"
+                clip-rule="evenodd"></path>
+            </svg><span>about</span></a></li>
+        <li><a href="#none" title="web"><svg viewBox="0 0 20 20" fill="currentColor" class="desktop-computer w-6 h-6">
+              <path fill-rule="evenodd"
+                d="M3 5a2 2 0 012-2h10a2 2 0 012 2v8a2 2 0 01-2 2h-2.22l.123.489.804.804A1 1 0 0113 18H7a1 1 0 01-.707-1.707l.804-.804L7.22 15H5a2 2 0 01-2-2V5zm5.771 7H5V5h10v7H8.771z"
+                clip-rule="evenodd"></path>
+            </svg><span>web</span></a>
+        </li>
+        <li><a href="#none" title="design"><svg viewBox="0 0 20 20" fill="currentColor" class="photograph w-6 h-6">
+              <path fill-rule="evenodd"
+                d="M4 3a2 2 0 00-2 2v10a2 2 0 002 2h12a2 2 0 002-2V5a2 2 0 00-2-2H4zm12 12H4l4-8 3 6 2-4 3 6z"
+                clip-rule="evenodd"></path>
+            </svg><span>design</span></a>
+        </li>
+        <li><a href="#none" title="contact"><svg viewBox="0 0 20 20" fill="currentColor" class="mail w-6 h-6">
+              <path d="M2.003 5.884L10 9.882l7.997-3.998A2 2 0 0016 4H4a2 2 0 00-1.997 1.884z"></path>
+              <path d="M18 8.118l-8 4-8-4V14a2 2 0 002 2h12a2 2 0 002-2V8.118z"></path>
+            </svg><span>contact</span></a></li>
+      </ul>
+        
+    </div>
   </header>
 
   <section>
@@ -69,16 +95,23 @@
   <script>
     var msts = 0; //0닫힘, 1열림
     $("#ham").click(function () {
-      if (msts == 1) { //닫힘상태면 열어라
-        $(this).next().animate({
+      if (msts == 1) { //닫힘상태면 열어라   
+        msts = 0; //열림상태
+        $(".h_inner").animate({
           left: "0"
         }, 500);
-        msts = 0; //열림상태
+          $(".tab_menu").animate({
+          left: "-300%"
+        }, 600);
       } else if (msts == 0) { //열림상태면 닫아라
-        $(this).next().animate({
+          
+        msts = 1; //닫힘상태
+        $(".h_inner").animate({
           left: "-300%"
         }, 500);
-        msts = 1; //닫힘상태
+          $(".tab_menu").animate({
+          left: "0%"
+        }, 600);
       }
 
     }); ///click///
