style : about 추가

--- a/index.html
+++ b/index.html
@@ -1,237 +1,164 @@
 <!DOCTYPE html>
 <html lang="ko">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Yurim Portfolio</title>
-    <script src="./script/jquery-1.7.2.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="./css/baes.css" />
-    <link rel="stylesheet" type="text/css" href="./css/core.css" />
-    <link rel="stylesheet" type="text/css" href="./css/main.css" />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="https://cdn.rawgit.com/moonspam/NanumSquare/master/nanumsquare.css"
-    />
-  </head>
 
-  <body>
-    <header>
-      <h1>
-        <a href="index.html" title="메인으로바로가기"
-          ><img src="./image/main_logo.svg" alt="메인로고"
-        /></a>
-      </h1>
-      <button id="ham">
-        <svg viewBox="0 0 20 20" fill="currentColor" class="menu w-6 h-6">
-          <path
-            fill-rule="evenodd"
-            d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
-            clip-rule="evenodd"
-          ></path>
-        </svg>
-      </button>
-      <div class="h_inner">
-        <ul id="gnb">
-          <li>
-            <a href="#none" title="about"
-              ><svg
-                viewBox="0 0 20 20"
-                fill="currentColor"
-                class="emoji-happy w-6 h-6"
-              >
-                <path
-                  fill-rule="evenodd"
-                  d="M10 18a8 8 0 100-16 8 8 0 000 16zM7 9a1 1 0 100-2 1 1 0 000 2zm7-1a1 1 0 11-2 0 1 1 0 012 0zm-.464 5.535a1 1 0 10-1.415-1.414 3 3 0 01-4.242 0 1 1 0 00-1.415 1.414 5 5 0 007.072 0z"
-                  clip-rule="evenodd"
-                ></path></svg
-              >about</a
-            >
-          </li>
-          <li>
-            <a href="#none" title="web"
-              ><svg
-                viewBox="0 0 20 20"
-                fill="currentColor"
-                class="desktop-computer w-6 h-6"
-              >
-                <path
-                  fill-rule="evenodd"
-                  d="M3 5a2 2 0 012-2h10a2 2 0 012 2v8a2 2 0 01-2 2h-2.22l.123.489.804.804A1 1 0 0113 18H7a1 1 0 01-.707-1.707l.804-.804L7.22 15H5a2 2 0 01-2-2V5zm5.771 7H5V5h10v7H8.771z"
-                  clip-rule="evenodd"
-                ></path></svg
-              >web</a
-            >
-            <ul class="sub">
-              <li><a href="#none" title="web">web</a></li>
-              <li><a href="#none" title="component">component</a></li>
-              <li><a href="#none" title="study">study</a></li>
-            </ul>
-          </li>
-          <li>
-            <a href="#none" title="design"
-              ><svg
-                viewBox="0 0 20 20"
-                fill="currentColor"
-                class="photograph w-6 h-6"
-              >
-                <path
-                  fill-rule="evenodd"
-                  d="M4 3a2 2 0 00-2 2v10a2 2 0 002 2h12a2 2 0 002-2V5a2 2 0 00-2-2H4zm12 12H4l4-8 3 6 2-4 3 6z"
-                  clip-rule="evenodd"
-                ></path></svg
-              >design</a
-            >
-            <ul class="sub">
-              <li><a href="#none" title="w_graphics">w_graphics</a></li>
-              <li><a href="#none" title="artwork">artwork</a></li>
-            </ul>
-          </li>
-          <li>
-            <a href="#none" title="contact"
-              ><svg
-                viewBox="0 0 20 20"
-                fill="currentColor"
-                class="mail w-6 h-6"
-              >
-                <path
-                  d="M2.003 5.884L10 9.882l7.997-3.998A2 2 0 0016 4H4a2 2 0 00-1.997 1.884z"
-                ></path>
-                <path
-                  d="M18 8.118l-8 4-8-4V14a2 2 0 002 2h12a2 2 0 002-2V8.118z"
-                ></path></svg
-              >contact</a
-            >
-          </li>
-        </ul>
-      </div>
-      <div class="tab_menu">
-        <ul class="tab_gnb">
-          <li>
-            <a href="#none" title="about"
-              ><svg
-                fill="none"
-                viewBox="0 0 24 24"
-                stroke="currentColor"
-                class="emoji-happy w-6 h-6"
-              >
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  stroke-width="2"
-                  d="M14.828 14.828a4 4 0 01-5.656 0M9 10h.01M15 10h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
-                ></path></svg
-              ><span>about</span></a
-            >
-          </li>
-          <li>
-            <a href="#none" title="web"
-              ><svg
-                fill="none"
-                viewBox="0 0 24 24"
-                stroke="currentColor"
-                class="desktop-computer w-6 h-6"
-              >
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  stroke-width="2"
-                  d="M9.75 17L9 20l-1 1h8l-1-1-.75-3M3 13h18M5 17h14a2 2 0 002-2V5a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"
-                ></path></svg
-              ><span>web</span></a
-            >
-          </li>
-          <li>
-            <a href="#none" title="design"
-              ><svg
-                fill="none"
-                viewBox="0 0 24 24"
-                stroke="currentColor"
-                class="photograph w-6 h-6"
-              >
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  stroke-width="2"
-                  d="M4 16l4.586-4.586a2 2 0 012.828 0L16 16m-2-2l1.586-1.586a2 2 0 012.828 0L20 14m-6-6h.01M6 20h12a2 2 0 002-2V6a2 2 0 00-2-2H6a2 2 0 00-2 2v12a2 2 0 002 2z"
-                ></path></svg
-              ><span>design</span></a
-            >
-          </li>
-          <li>
-            <a href="#none" title="contact"
-              ><svg
-                fill="none"
-                viewBox="0 0 24 24"
-                stroke="currentColor"
-                class="mail w-6 h-6"
-              >
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  stroke-width="2"
-                  d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"
-                ></path></svg
-              ><span>contact</span></a
-            >
-          </li>
-        </ul>
-      </div>
-    </header>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Yurim Portfolio</title>
+  <script src="./script/jquery-1.7.2.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="./css/baes.css" />
+  <link rel="stylesheet" type="text/css" href="./css/core.css" />
+  <link rel="stylesheet" type="text/css" href="./css/main.css" />
+  <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/moonspam/NanumSquare/master/nanumsquare.css" />
+</head>
 
-    <section>
-      <img src="./image/main_ba_left.png" alt="메인배경이미지" />
-      <img src="./image/main_ba_right.png" alt="메인배경이미지" />
-      <img src="./image/main_ba_ce.png" alt="메인배경이미지" class="ba_tast" />
-      <h2 class="title_none">메인페이지</h2>
-      <!-- <article class="visual">
+<body>
+  <header>
+    <h1>
+      <a href="index.html" title="메인으로바로가기"><img src="./image/main_logo.svg" alt="메인로고" /></a>
+    </h1>
+    <button id="ham">
+      <svg viewBox="0 0 20 20" fill="currentColor" class="menu w-6 h-6">
+        <path fill-rule="evenodd"
+          d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
+          clip-rule="evenodd"></path>
+      </svg>
+    </button>
+    <div class="h_inner">
+      <ul id="gnb">
+        <li>
+          <a href="./pages/about.html" title="about"><svg viewBox="0 0 20 20" fill="currentColor"
+              class="emoji-happy w-6 h-6">
+              <path fill-rule="evenodd"
+                d="M10 18a8 8 0 100-16 8 8 0 000 16zM7 9a1 1 0 100-2 1 1 0 000 2zm7-1a1 1 0 11-2 0 1 1 0 012 0zm-.464 5.535a1 1 0 10-1.415-1.414 3 3 0 01-4.242 0 1 1 0 00-1.415 1.414 5 5 0 007.072 0z"
+                clip-rule="evenodd"></path>
+            </svg>about</a>
+        </li>
+        <li>
+          <a href="#none" title="web"><svg viewBox="0 0 20 20" fill="currentColor" class="desktop-computer w-6 h-6">
+              <path fill-rule="evenodd"
+                d="M3 5a2 2 0 012-2h10a2 2 0 012 2v8a2 2 0 01-2 2h-2.22l.123.489.804.804A1 1 0 0113 18H7a1 1 0 01-.707-1.707l.804-.804L7.22 15H5a2 2 0 01-2-2V5zm5.771 7H5V5h10v7H8.771z"
+                clip-rule="evenodd"></path>
+            </svg>web</a>
+          <ul class="sub">
+            <li><a href="#none" title="web">web</a></li>
+            <li><a href="#none" title="component">component</a></li>
+            <li><a href="#none" title="study">study</a></li>
+          </ul>
+        </li>
+        <li>
+          <a href="#none" title="design"><svg viewBox="0 0 20 20" fill="currentColor" class="photograph w-6 h-6">
+              <path fill-rule="evenodd"
+                d="M4 3a2 2 0 00-2 2v10a2 2 0 002 2h12a2 2 0 002-2V5a2 2 0 00-2-2H4zm12 12H4l4-8 3 6 2-4 3 6z"
+                clip-rule="evenodd"></path>
+            </svg>design</a>
+          <ul class="sub">
+            <li><a href="#none" title="w_graphics">w_graphics</a></li>
+            <li><a href="#none" title="artwork">artwork</a></li>
+          </ul>
+        </li>
+        <li>
+          <a href="#none" title="contact"><svg viewBox="0 0 20 20" fill="currentColor" class="mail w-6 h-6">
+              <path d="M2.003 5.884L10 9.882l7.997-3.998A2 2 0 0016 4H4a2 2 0 00-1.997 1.884z"></path>
+              <path d="M18 8.118l-8 4-8-4V14a2 2 0 002 2h12a2 2 0 002-2V8.118z"></path>
+            </svg>contact</a>
+        </li>
+      </ul>
+    </div>
+    <div class="tab_menu">
+      <ul class="tab_gnb">
+        <li>
+          <a href="./pages/about.html" title="about"><svg fill="none" viewBox="0 0 24 24" stroke="currentColor"
+              class="emoji-happy w-6 h-6">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                d="M14.828 14.828a4 4 0 01-5.656 0M9 10h.01M15 10h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+            </svg><span>about</span></a>
+        </li>
+        <li>
+          <a href="#none" title="web"><svg fill="none" viewBox="0 0 24 24" stroke="currentColor"
+              class="desktop-computer w-6 h-6">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                d="M9.75 17L9 20l-1 1h8l-1-1-.75-3M3 13h18M5 17h14a2 2 0 002-2V5a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z">
+              </path>
+            </svg><span>web</span></a>
+        </li>
+        <li>
+          <a href="#none" title="design"><svg fill="none" viewBox="0 0 24 24" stroke="currentColor"
+              class="photograph w-6 h-6">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                d="M4 16l4.586-4.586a2 2 0 012.828 0L16 16m-2-2l1.586-1.586a2 2 0 012.828 0L20 14m-6-6h.01M6 20h12a2 2 0 002-2V6a2 2 0 00-2-2H6a2 2 0 00-2 2v12a2 2 0 002 2z">
+              </path>
+            </svg><span>design</span></a>
+        </li>
+        <li>
+          <a href="#none" title="contact"><svg fill="none" viewBox="0 0 24 24" stroke="currentColor"
+              class="mail w-6 h-6">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z">
+              </path>
+            </svg><span>contact</span></a>
+        </li>
+      </ul>
+    </div>
+  </header>
+
+  <section>
+    <img src="./image/main_ba_left.png" alt="메인배경이미지" />
+    <img src="./image/main_ba_right.png" alt="메인배경이미지" />
+    <img src="./image/main_ba_ce.png" alt="메인배경이미지" class="ba_tast" />
+    <h2 class="title_none">메인페이지</h2>
+    <!-- <article class="visual">
         <div></div>
       </article> -->
-    </section>
+  </section>
 
-    <footer></footer>
-    <script>
-      var msts = 0; //0닫힘, 1열림
-      $("#ham").click(function () {
-        if (msts == 1) {
-          //닫힘상태면 열어라
-          msts = 0; //열림상태
-          $(".h_inner").animate(
-            {
-              left: "0",
-            },
-            500
-          );
-          $(".tab_menu").animate(
-            {
-              left: "-300%",
-            },
-            600
-          );
-          $("section img:first-child").animate({
+  <footer></footer>
+
+  <script>
+    var num = 0; //0닫힘, 1열림
+    $("#ham").click(function () {
+      if (num == 1) {
+        //닫힘상태면 열어라
+        num = 0; //열림상태
+        $(".h_inner").animate({
+            left: "0",
+          },
+          500
+        );
+        $(".tab_menu").animate({
+            left: "-300%",
+          },
+          600
+        );
+        $("section").animate({
+          padding: "0px 0px 0px 230px",
+        });
+        $("section img:first-child").animate({
+          left: "0%",
+        });
+      } else if (num == 0) {
+        //열림상태면 닫아라
+
+        num = 1; //닫힘상태
+        $(".h_inner").animate({
+            left: "-300%",
+          },
+          500
+        );
+        $(".tab_menu").animate({
             left: "0%",
-          });
-        } else if (msts == 0) {
-          //열림상태면 닫아라
+          },
+          600
+        );
+        $("section").animate({
+          padding: "0px 0px 0px 80px",
+        });
+        $("section img:first-child").animate({
+          left: "-7%",
+        });
+      }
+    }); ///click///
+  </script>
+</body>
 
-          msts = 1; //닫힘상태
-          $(".h_inner").animate(
-            {
-              left: "-300%",
-            },
-            500
-          );
-          $(".tab_menu").animate(
-            {
-              left: "0%",
-            },
-            600
-          );
-          $("section img:first-child").animate({
-            left: "-7%",
-          });
-        }
-      }); ///click///
-    </script>
-  </body>
 </html>
