graphics : 페이지 추가

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 clip-rule="evenodd"></path>
             </svg>design</a>
           <ul class="sub">
-            <li><a href="#none" title="w_graphics">w_graphics</a></li>
+            <li><a href="./pages/graphics.html" title="w_graphics">web_graphics</a></li>
             <li><a href="#none" title="artwork">artwork</a></li>
           </ul>
         </li>
