graphics : style 스타일 수정

--- a/pages/graphics.html
+++ b/pages/graphics.html
@@ -112,8 +112,10 @@
                 </li>
             </ul>
         </div>
+
     </header>
     <section>
+
         <h2 class="title_none">웹그래픽 페이지</h2>
         <article class="p_lt">
             <h2 class="title_none">현재 위치 표기</h2>
@@ -148,33 +150,106 @@
         <article class="cont">
             <h2 class="title_none">all</h2>
             <ul class="cont_01">
-                <li><a href="http://www.fairplay142.com/shop/shopdetail.html?branduid=139560" title="자시히보기">
-                        <img src="http://www.fairplay142.com/shopimages/efairplay/0170010081182.jpg?1564016507" alt="">
-                        <p class="title"><span>브랜드명</span>분야</p>
-                        <span></span>
+                <li>
+                    <a href="http://www.fairplay142.com/shop/shopdetail.html?branduid=139560" title="자세히보기"
+                        target="_blank">
+                        <img src=" http://www.fairplay142.com/shopimages/efairplay/0170010081182.jpg?1564016507" alt="">
+                        <span>타임 트래벌러 와이드<br>반팔티셔츠</span>
                     </a>
+                    <p class="title"><span>더블유브이</span>#상세페이지 #썸네일<br>#그래픽 #보정</p>
+                </li>
+                <li>
+                    <a href="http://www.fairplay142.com/shop/shopdetail.html?branduid=139175" title="자세히보기"
+                        target="_blank">
+                        <img src=" http://www.fairplay142.com/shopimages/efairplay/0170010078982.jpg?1564016473" alt="">
+                        <span>컨트롤러<br>반팔 티셔츠</span>
+                    </a>
+                    <p class="title"><span>더블유브이</span>#상세페이지 #썸네일<br>#그래픽 #보정</p>
+                </li>
+                <li>
+                    <a href="http://www.fairplay142.com/shop/shopdetail.html?branduid=141175" title="자세히보기"
+                        target="_blank">
+                        <img src="http://www.fairplay142.com/shopimages/efairplay/0170010092292.jpg?1564016572" alt="">
+                        <span>슈어 체크<br>반팔셔츠</span>
+                    </a>
+                    <p class="title"><span>더블유브이</span>#상세페이지 #썸네일<br>#그래픽 #보정</p>
+                </li>
+                <li>
+                    <a href="http://www.fairplay142.com/shop/shopdetail.html?branduid=134535" title="자세히보기"
+                        target="_blank">
+                        <img src="http://www.fairplay142.com/shopimages/efairplay/0170030002312.jpg?1564016340" alt="">
+                        <span>초이스<br>아노락</span>
+                    </a>
+                    <p class="title"><span>더블유브이</span>#상세페이지 #썸네일<br>#그래픽 #보정</p>
+                </li>
+                <li>
+                    <a href="http://www.fairplay142.com/shop/shopdetail.html?branduid=133692" title="자세히보기"
+                        target="_blank">
+                        <img src="http://www.fairplay142.com/shopimages/efairplay/0170010113582.jpg?1540804384" alt="">
+                        <span>스크리블<br>맨투맨</span>
+                    </a>
+                    <p class="title"><span>더블유브이</span>#상세페이지 #썸네일<br>#그래픽 #보정</p>
+                </li>
+                <li>
+                    <a href="http://www.fairplay142.com/shop/shopdetail.html?branduid=138143" title="자세히보기"
+                        target="_blank">
+                        <img src="http://www.fairplay142.com/shopimages/efairplay/0170010075272.jpg?1564016443" alt="">
+                        <span>레브<br>니트</span>
+                    </a>
+                    <p class="title"><span>더블유브이</span>#상세페이지 #썸네일<br>#그래픽 #보정</p>
+                </li>
+                <li>
+                    <a href="http://www.fairplay142.com/shop/shopdetail.html?branduid=134538" title="자세히보기"
+                        target="_blank">
+                        <img src="http://www.fairplay142.com/shopimages/efairplay/0170030004992.jpg?1564016339" alt="">
+                        <span>스위드<br>코치자켓</span>
+                    </a>
+                    <p class="title"><span>더블유브이</span>#상세페이지 #썸네일<br>#그래픽 #보정</p>
+                </li>
+                <li>
+                    <a href="http://www.fairplay142.com/shop/shopdetail.html?branduid=137505" title="자세히보기"
+                        target="_blank">
+                        <img src="http://www.fairplay142.com/shopimages/efairplay/0170030011992.jpg?1564016358" alt="">
+                        <span>추즈업 후리스<br>후드집업</span>
+                    </a>
+                    <p class="title"><span>더블유브이</span>#상세페이지 #썸네일<br>#그래픽 #보정</p>
                 </li>
                 <!-- 기준 -->
             </ul>
             <button class="more">more</button>
             <ul class="cont_02">
-                <li><a href="#none" title="자시히보기">
-                        <p class="title"><span>브랜드명</span>분야</p>
-                        <span></span>
+                <li>
+                    <a href="http://www.fairplay142.com/shop/shopdetail.html?branduid=141567" title="자세히보기"
+                        target="_blank">
+                        <img src="http://www.fairplay142.com/shopimages/efairplay/0170010095042.jpg?1561974121" alt="">
+                        <span>포메이션 반팔</span>
                     </a>
+                    <p class="title"><span>펀치라인</span>#상세페이지 #썸네일<br>#그래픽 #보정</p>
                 </li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <!-- 기준 -->
+                <li>
+                    <a href="http://www.fairplay142.com/shop/shopdetail.html?branduid=141566" title="자세히보기"
+                        target="_blank">
+                        <img src="http://www.fairplay142.com/shopimages/efairplay/0170010095032.jpg?1561974122" alt="">
+                        <span>메트로폴리스<br>반팔</span>
+                    </a>
+                    <p class="title"><span>펀치라인</span>#상세페이지 #썸네일<br>#그래픽 #보정</p>
+                </li>
+                <li>
+                    <a href="http://www.fairplay142.com/shop/shopdetail.html?branduid=138105" title="자세히보기"
+                        target="_blank">
+                        <img src="http://www.fairplay142.com/shopimages/efairplay/0170010134372.jpg?1574305508" alt="">
+                        <span>오사카인더시티<br>후드</span>
+                    </a>
+                    <p class="title"><span>펀치라인</span>#상세페이지 #썸네일<br>#그래픽 #보정</p>
+                </li>
+                <li>
+                    <a href="http://www.fairplay142.com/shop/shopdetail.html?branduid=137744" title="자세히보기"
+                        target="_blank">
+                        <img src="http://www.fairplay142.com/shopimages/efairplay/0170010074422.jpg?1567735932" alt="">
+                        <span>리플렉션 후드</span>
+                    </a>
+                    <p class="title"><span>펀치라인</span>#상세페이지 #썸네일<br>#그래픽 #보정</p>
+                </li>
             </ul>
         </article>
     </section>
